--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio: ^5.8.0+1
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
